--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,13 @@
     font-weight: regular;
     transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
     border: 1px solid #3D3D6A;
+
+    background-image: linear-gradient(to right, #e65e31, #ac304b, #63149f);
+    color: #1D1D3C;
+    border: 0.5px solid #e65e31;
+    box-shadow: 0 0 30px #e65e31;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: semi-bold;
 }
 
 .button-custom:hover {
@@ -59,7 +66,7 @@
   .gradient-background {
     background: linear-gradient(310deg,#11111c,#1d1d3c,#05051f);
     background-size: 180% 180%;
-    animation: gradient-animation 15s ease infinite;
+    animation: gradient-animation 5s ease infinite;
   }
   
   @keyframes gradient-animation {
